[package]
name = "chameleon"
version = "0.1.0"
authors = ["Albert Kim <alkim@alkim.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.4.0"
snowflake = "1.3.0"
roaring = "0.6.0"
regex = "1.2.1"
lazy_static = "1.4.0"
byteorder = "1.3.2"
structopt = "0.3"
log = "0.4"
fern = "0.5"
num = "0.2.0"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
spin_sleep = "0.3.7"
rand = "0.7"
itertools = "0.8.2"
approx = "0.5.1"
serde_json = { version = "1.0.85", features = ["std"] }

[profile.release]
debug = true
